--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -66,7 +66,7 @@
             volume-label="{{volume.label}}">
           </v-volume-image>
         {% elif volume.pid in fir|safe and "[]" in fir|safe %}
-        {% if forloop.first %}
+        {% if forloop.last %}
           <v-volume-image 
             img-src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}" 
             volume-label="{{volume.label}}">
@@ -180,7 +180,7 @@
             volume-label="{{volume.label}}">
           </v-volume-image>
         {% elif volume.pid in fir|safe and "[]" in fir|safe %}
-        {% if forloop.first %}
+        {% if forloop.last %}
           <v-volume-image 
             img-src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}" 
             volume-label="{{volume.label}}">
