--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -82,7 +82,7 @@
             volume-label="{{volume.label}}">
           </v-volume-image>
         {% elif volume.pid in fir|safe and "[]" in fir|safe %}
-        {% if forloop.first %}
+        {% if forloop.last %}
           <v-volume-image 
             img-src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}" 
             volume-label="{{volume.label}}">
