--- a/apps/templates/collection.html
+++ b/apps/templates/collection.html
@@ -81,7 +81,7 @@
             img-src="{{ canvas.thumbnail_crop_tallwide }}" 
             volume-label="{{volume.label}}">
           </v-volume-image>
-        {% elif volume.pid in fir|safe and "[]" in fir|safe %}
+        {% elif volume.pid == fir|safe|slice:"2:-6" and "[]" in fir|safe %}
         {% if forloop.last %}
           <v-volume-image 
             img-src="{{ volume.canvas_set.first.thumbnail_crop_tallwide }}" 
