--- a/apps/templates/jekyll_export.html
+++ b/apps/templates/jekyll_export.html
@@ -28,9 +28,9 @@
         {% else %}
           <div class="alert alert-success">GitHub Jekyll site export succeeded.</div>
           <p>Your website export has been generated and saved to a new
-          GitHub repository at <a class="repo-url">{{ repo_url }}</a>.
-          Your annotated web edition should now be accessible via GitHub Pages
-          at <a class="ghpages-url">{{ ghpages_url }}</a>.</p>
+          GitHub repository at <a class="repo-url" href="{{ repo_url }}">{{ repo_url }}</a>.<br/>
+          After a few minutes, your annotated web edition should be accessible via GitHub Pages
+          at <a class="ghpages-url" href="{{ ghpages_url }}">{{ ghpages_url }}</a>.</p>
 
           <p>For more information on using and customizing your site,
           see the
