--- a/apps/templates/account/verification_sent.html
+++ b/apps/templates/account/verification_sent.html
@@ -7,7 +7,7 @@
 {% block inner %}
     <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes. Please check your SPAM folder, as the e-mail may be there.{% endblocktrans %}</p>
 
 {% endblock %}
 
