--- a/apps/templates/admin/base.html
+++ b/apps/templates/admin/base.html
@@ -29,7 +29,7 @@
         {% block branding %}{% endblock %}
         </div>
         <div id="branding">
-        <a href="/cms"><button style="border-radius:10px;">{% trans 'Go to the CMS' %}</button></a>
+        <a href="/cms"><button style="border-radius:10px;">{% trans 'Readux Wagtail CMS' %}</button></a>
         </div>
         {% block usertools %}
         {% if has_permission %}
