--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -21,7 +21,7 @@
 
 <div class="uk-flex-middle" uk-grid data-uk-grid-match>
   <div class="uk-width-2-3@m uk-flex-first">
-    <div id="viewer" style="max-height: 80vh"></div>
+    <div id="viewer"></div>
   </div>
 
   <div class="uk-width-1-3@m rx-info-container">
@@ -276,7 +276,6 @@
       {% endif %}
       "annotationEndpoint": { "name":"Readux", "module": "ReaduxEndpoint" }
     });
-    
   });
 
 </script>
