--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -2,6 +2,17 @@
 {% load static i18n %}
 {% block extra_css %}
 <link href="{% static 'mirador/css/mirador-combined.css' %}" rel="stylesheet">
+{% if request.get_host == "readux2.ecdsdev.org" %}
+<style>
+#viewer {
+  width: 78%;
+  height: calc(100% - 193px - 2.5em);
+  position: absolute;
+  bottom: 0px;
+  background: none !important;
+}
+</style>
+{% endif %}
 {% endblock extra_css %}
 
 {% block content %}
