--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -12,6 +12,16 @@
   background: none !important;
 }
 </style>
+{% elif request.get_host == "readux.ecdsdev.org" %}
+<style>
+#viewer {
+  width: 78%;
+  height: calc(100% - 193px - 2em);
+  position: absolute;
+  bottom: 0px;
+  background: none !important;
+}
+</style>
 {% endif %}
 {% endblock extra_css %}
 
