--- a/apps/templates/base.html
+++ b/apps/templates/base.html
@@ -76,7 +76,7 @@
     </div>
     {% elif request.get_host == "readux.ecdsdev.org" %}
     <div style="background-color:sandybrown;width:100%;height:1.5em;color:darkslategrey;text-align:center;font-size:1.4em;">
-    DEVELOPMENT SITE: Go to <a href="https://readux2.ecsdev.org" style="color:red;">Beta</a> for beta-testing or go to fully functioning 
+    DEVELOPMENT SITE: Go to <a href="https://readux2.ecdsdev.org" style="color:red;text-decoration:underline;">Beta</a> for beta-testing or go to fully functioning 
     <a href="https://readux.ecds.emory.edu/" style="color:darkblue;text-decoration:underline;">Readux</a>.
     </div>
     {% endif %}
