--- a/apps/templates/page.html
+++ b/apps/templates/page.html
@@ -214,17 +214,18 @@
           url="https://{{ request.META.HTTP_HOST }}{% url 'volume' volume.pid %}/page/all">
         </v-info-content-url-single>
 
-        {% if page.pid is not None %}
-
         {% if "/page/all" in request.get_full_path or "?q=" in request.get_full_path %}
           <v-info-content-url-external 
             ref="rx-url-canvas" v-show="false">
           </v-info-content-url-external>
+
+        <v-info-content-url-external 
+          ref="rx-url-stable-page" v-show="false">
+        </v-info-content-url-external>
         {% else %}
         <v-info-content-url-external 
           ref="rx-url-canvas">
         </v-info-content-url-external>
-        {% endif %}
 
         <v-info-content-url-external 
           ref="rx-url-stable-page">
