--- a/apps/templates/wagtailadmin/home.html
+++ b/apps/templates/wagtailadmin/home.html
@@ -5,7 +5,11 @@
 
 {% block extra_css %}
     {{ block.super }}
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/css/uikit.min.css" />
+    <link href="{% static 'css/selectize.css' %}" rel="stylesheet">
+    <link href="{% static 'css/project.css' %}" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.20/js/uikit-icons.min.js"></script>
     <link rel="stylesheet" href="{% static 'wagtailadmin/css/layouts/home.css' %}" type="text/css" />
 {% endblock %}
 
@@ -16,7 +20,7 @@
                 <div class="avatar"><img src="{% avatar_url user %}" alt="" /></div>
             </div>
             <div class="col9">
-                <h1>{% block branding_welcome %}{% blocktrans %}Welcome to the {{ site_name }} Wagtail CMS{% endblocktrans %}{% endblock %}&nbsp;&nbsp;<a href="/admin"><button style="border-radius:10px;">Django Admin</button></a></h1>
+                <h1>{% block branding_welcome %}{% blocktrans %}Welcome to the {{ site_name }} Wagtail CMS{% endblocktrans %}{% endblock %}&nbsp;&nbsp;<a href="/admin"><span class="uk-user" uk-icon="icon: cog" uk-tooltip="title: Django admin; pos: bottom"></span></a></h1>
                 <h2>{{ user.get_full_name|default:user.get_username }}</h2>
             </div>
         </div>
