--- a/apps/templates/account/email.html
+++ b/apps/templates/account/email.html
@@ -84,6 +84,15 @@
 
 <div class="uk-margin-bottom">
   <div class="rx-title-2">{% trans "Add E-mail Address" %}</div>
+      <form method="post" action="{% url 'account_email' %}" class="add_email">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+    </form>
+    
+###### above from https://github.com/pennersr/django-allauth/blob/416b5fb8ecb2a54139e992f67201b9b6038c54fa/allauth/templates/account/email.html#L50 works
+###### below styled does not
+
   {% trans 'You may add additional E-mails below' %}
   <form method="post" action="{% url 'account_email' %}" class="add_email">
     {% csrf_token %}
