--- a/apps/templates/account/email.html
+++ b/apps/templates/account/email.html
@@ -83,41 +83,12 @@
 <hr class="uk-divider-icon">
 
 <div class="uk-margin-bottom">
-  <div class="rx-title-2">{% trans "Add E-mail Address" %}</div>
+  <div class="rx-title-2">{% trans "You may add additional E-mails below" %}</div>
       <form method="post" action="{% url 'account_email' %}" class="add_email">
         {% csrf_token %}
         {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add E-mail" %}</button>
+        <button class="rx-btn rx-btn-extension rx-btn-small" name="action_add" type="submit">{% trans "Add E-mail" %}</button>
     </form>
-    
-###### above from https://github.com/pennersr/django-allauth/blob/416b5fb8ecb2a54139e992f67201b9b6038c54fa/allauth/templates/account/email.html#L50 works
-###### below styled does not
-
-  {% trans 'You may add additional E-mails below' %}
-  <form method="post" action="{% url 'account_email' %}" class="add_email">
-    {% csrf_token %}
-    {{ form.non_field_errors }}
-    
-    {% for hidden_field in form.hidden_fields %}
-    {{ hidden_field.errors }}
-    {{ hidden_field }}
-    {% endfor %}
-    
-    {% for field in form.visible_fields %}
-    
-    <div class="uk-margin-small">
-      <label class="uk-form-label" for="form-horizontal-text">{{ field.label_tag }}</label>
-      <div class="uk-form-controls">
-        {{ field.errors }}
-        <input class="uk-input" id="form-horizontal-text" type="text" placeholder="{{ field.help_text }}"
-          name="{{ form.name.name }}" id="{{ form.name.id_for_label }}"
-          {% if form.name.value != None %}value="{{ form.name.value|stringformat:'s' }}" {% endif %}
-          maxlength="{{ form.name.field.max_length }}" {% if form.name.field.required %}required{% endif %}>
-      </div>
-    </div>
-    {% endfor %}
-    <button class="rx-btn rx-btn-extension rx-btn-small" name="action_add" type="submit">{% trans "Add" %}</button>
-  </form>
 </div>
 
 {% endblock %}
