--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1 class='uk-heading-hero uk-text-center'>Readux</h1>
 <h2 class='uk-heading-primary uk-text-center'>Read. Annotate. Publish.</h2>
-<p class='uk-text-lead uk-text-center'>See results of a full text search of all volumes below.</p>
+<p class='uk-text-lead uk-text-center'>See results of a full text search of all volumes below. Search for individual whole keywords.</p>
 
       <div>
       <form class="uk-search uk-search-default" style="width: 100% !important;"
