--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -7,7 +7,7 @@
 {% block content %}
 <h1 class='uk-heading-hero uk-text-center'>Readux</h1>
 <p class='uk-text-lead uk-text-center'>See results of a full text search of all volumes below.</p>
-<p class='uk-text-lead uk-text-center uk-text-small'> Search for individual whole keywords. Use | for 'or' between keywords, and :* as a wildcard at the end of a keyword. E.g. Roma:* will match Roman, too.</p>
+<p class='uk-text-lead uk-text-center uk-text-small'> Search for individual whole keywords. Multiple words will be searched as 'or' (e.g. Rome London = Rome or London).</p>
 
       <div>
       <form class="uk-search uk-search-default" style="width: 100% !important;"
