--- a/apps/templates/search_results.html
+++ b/apps/templates/search_results.html
@@ -92,7 +92,7 @@
   </div>
   {% endfor %}
   {% if not qs3 %}
-  <div><span class="results" style="background:#fff1e4;font-size:2em;"> There were no results for <em>{{ request.GET.q }}</em>.</span></div>
+  <div><span class="results" style="background:#fff1e4;font-size:2em;color:#707070;"> There were no results for <em>{{ request.GET.q }}</em>.</span></div>
   {% endif %}
   </div>
       {% endif %}
