add Readux video

--- a/apps/templates/cms/home_page.html
+++ b/apps/templates/cms/home_page.html
@@ -13,6 +13,9 @@
       <li>Publish.</li>
     </ul>
     <div class="rx-splash-item">
+     {% if request.get_host == "readux2.ecdsdev.org" %}
+      <iframe width="320" height="180" src="https://player.vimeo.com/video/374786964" frameborder="0" allow="fullscreen" allowfullscreen style="margin-top:0.5em;"></iframe>
+     {% endif %}
       <p class="">Engage with digitized print materials on an open source software platform and share new thinking.</p>
       <img src="static/images/ecds.svg" class="readux-home-ecds">
     </div>
